Started Working on User Log In System

--- a/views/landing_page.css
+++ b/views/landing_page.css
@@ -1,6 +1,6 @@
 body{
     background: url(Background.jpg);
-    color: #fff;
+    color: yellow;
 }
 header{
     font-family: 'Roboto Condensed', sans-serif;
